# Client.php
@@ -20,6 +20,106 @@ class Client extends \Swiftype\AbstractClient
     // phpcs:disable
 
     /**
+     * Bulk creation of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_create
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of documents to create.
+     *
+     * @return array
+     */
+    public function bulkCreateDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('BulkCreateDocuments');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
+     * Bulk creation or update of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_create_or_update_verbose
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of documents to index.
+     *
+     * @return array
+     */
+    public function bulkCreateOrUpdateDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('BulkCreateOrUpdateDocuments');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
+     * Bulk delete of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_destroy
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of deleted documents external ids.
+     *
+     * @return array
+     */
+    public function bulkDeleteDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('BulkDeleteDocuments');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
+     * Bulk update of documents in an engine.
+     *
+     * Documentation: https://swiftype.com/documentation/site-search/indexing#bulk_update
+     *
+     * @param string $engineName     Name of the engine.
+     * @param string $documentTypeId Document type id.
+     * @param array  $documents      List of documents to update.
+     *
+     * @return array
+     */
+    public function bulkUpdateDocuments($engineName, $documentTypeId, $documents)
+    {
+        $params = [
+            'engine_name' => $engineName,
+            'document_type_id' => $documentTypeId,
+            'documents' => $documents,
+        ];
+
+        $endpoint = $this->getEndpoint('BulkUpdateDocuments');
+        $endpoint->setParams($params);
+
+        return $this->performRequest($endpoint);
+    }
+
+    /**
      * Create a new document in an engine.
      *
      * Documentation: https://swiftype.com/documentation/site-search/indexing#add-document
